--- a/.env
+++ b/.env
@@ -4,5 +4,5 @@ DB_ENGINE=django.db.backends.postgresql_psycopg2
 DB_NAME=medium_db
 DB_USER=medium_user
 DB_PASSWORD=medium_user_password
-DB_HOST=medium_db_host    # bu yerda medium_db_host qo'yilganiga sabab, biz  orqali yaratilgan databasega ulanyapmiz
+DB_HOST=localhost    # bu yerda localhost qo'yilganiga sabab, biz local kompyuterimizdagi databasega ulanyapmiz
 DB_PORT=5432
