--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
-# .env
+
 SECRET_KEY=g7df7fg8hgfdg9fdg8d7fg567sd5f098dfg7df
 DEBUG=True
 DB_ENGINE=django.db.backends.postgresql_psycopg2
 DB_NAME=medium_db
 DB_USER=medium_user
 DB_PASSWORD=medium_user_password
-DB_HOST=localhost    # bu yerda localhost qo'yilganiga sabab, biz local kompyuterimizdagi databasega ulanyapmiz
+DB_HOST=localhost
 DB_PORT=5432
